[package]
name = "ipgeolocate"
version = "0.3.5"
authors = ["Grant Handy <grantshandy@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
description = "Get IP address geolocation information freely."
repository = "https://github.com/DefunctLizard/ipgeolocate/"
documentation = "https://docs.rs/ipgeolocate"
keywords = ["geolocation", "ip", "locator", "geolocator", "geolocate"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
surf = "2.2.0"
futures = "0.3.13"

[dev-dependencies]
tokio = { version = "1.4.0", features = ["full"] }