[package]
name = "ipgeolocate"
version = "0.3.5"
authors = ["Grant Handy <grantshandy@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
description = "Get IP address geolocation information freely."
repository = "https://github.com/DefunctLizard/ipgeolocate/"
documentation = "https://docs.rs/ipgeolocate"
keywords = ["geolocation", "ip", "locator", "geolocator", "geolocate"]
categories = ["network-programming"]

[dependencies]
serde_json = "1.0.91"
surf = { version = "2.3.2", default-features = false }
futures = "0.3.25"

[dev-dependencies]
tokio = { version = "1.24.1", features = ["full"] }

[features]
default = ["surf/default"]
# Replace "curl-client" with "h1-client-rustls" in "surf/default"
h1-client-rustls = [
    "surf/h1-client-rustls",
    "surf/middleware-logger",
    "surf/encoding",
]
