[package]
name = "ipgeolocate"
version = "0.3.6"
authors = ["Grant Handy <granthandy@proton.me>"]
edition = "2018"
license = "GPL-3.0"
description = "Get IP address geolocation information freely."
repository = "https://github.com/grantshandy/ipgeolocate/"
documentation = "https://docs.rs/ipgeolocate"
keywords = ["geolocation", "ip", "locator", "geolocator", "geolocate"]
categories = ["network-programming"]

[dependencies]
serde_json = "1.0.91"
reqwest = "0.11"
futures = "0.3.26"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio = { version = "1.25.0", features = ["full"] }
